mydb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydb
  labels:
    app: mydb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydb
  template:
    metadata:
      labels:
        app: mydb
    spec:
      containers:
      - name: mydb
        image: mongo
        ports:
        - containerPort: 27017
