headless-service-mydb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hlMongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
  clusterIP: None
  selector:
    app: mongo
