service-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-myapp
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: myapp
