service-mydb.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mydb
spec:
  type: ClusterIP
  ports:
      - port: 27017
  selector:
    app: mydb
