service-myserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-myserver
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  selector:
    app: myserver
